--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopX - E-Commerce</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <canvas id="backgroundCanvas"></canvas>
@@ -105,6 +105,6 @@
         <p>&copy; 2024 ShopX. All rights reserved.</p>
     </footer>
 
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
